# FPGuard

./: README.md  pyproject.toml  requirements.txt  setup.cfg
fpguard/: __init__.py  bank.py  config.py  cuda_ops.py  detox.py  distributed.py  fingerprints.py  inference.py  models.py  train_contrastive.py
fpguard/cli/: build_bank.py  detox.py  infer.py  train.py
fpguard/cuda/: ops.cpp  sim_topk.cu
